# aeko-mcp

./: .gitignore  .mcp.json  .version-bump.json  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  server.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: .mcp.json  plugin.json
.codex-plugin/skills/aeko-action-center/: SKILL.md
.codex-plugin/skills/aeko-competitive-pdp-input/: SKILL.md
.codex-plugin/skills/aeko-create-external-content/: SKILL.md
.codex-plugin/skills/aeko-create-own-content/: SKILL.md
.codex-plugin/skills/aeko-draft-from-campaign/: SKILL.md
.codex-plugin/skills/aeko-fix-store-level/: SKILL.md
.codex-plugin/skills/aeko-optimize-pdp/: SKILL.md
.codex-plugin/skills/aeko-update-pdp/: SKILL.md
.codex-plugin/skills/aeo-audit/: SKILL.md
.codex-plugin/skills/aeo-audit-local/: SKILL.md
.codex-plugin/skills/aeo-optimize/: SKILL.md
.codex-plugin/skills/competitive-research/: SKILL.md
.codex-plugin/skills/create-blog-article/: SKILL.md
.codex-plugin/skills/create-marketing-materials/: SKILL.md
.codex-plugin/skills/create-social-content/: SKILL.md
.codex-plugin/skills/create-visibility-report/: SKILL.md
.codex-plugin/skills/generate-faq/: SKILL.md
.codex-plugin/skills/generate-jsonld/: SKILL.md
.github/workflows/: release-bump-backend.yml
aeko_mcp/: client.py  server.py
aeko_mcp/templates/: pdp_responsive_scaffold.html
aeko_mcp/tools/: _annotations.py  action_plan.py  aeko_score.py  analytics.py  brand_kit.py  campaigns.py  citability.py  content.py  content_recommendations.py  content_variation.py  contexts.py  crawl.py  ga4.py  generate.py  geo_score.py  icps.py  images.py  local_content.py  marketing.py  media_upload.py  own_content.py  pdp.py  preview.py  product.py  report.py  research.py  reviews.py  setup.py  sources.py  store_write.py  suggestions.py  suggestions_v2.py  views.py  visibility.py
docs/: aeko-mcp-overview.md  mcp-plugin-capability-tables.md
docs/contracts/: action-item-contract.md
docs/plans/: remove-campaigns.md
skills/aeko-action-center/: SKILL.md
skills/aeko-brand-kit/: SKILL.md
skills/aeko-fix-technical/: SKILL.md
skills/aeko-optimize-pdp/: SKILL.md
skills/aeko-run-action/: SKILL.md
skills/aeko-update-pdp/: SKILL.md
skills/aeo-audit/: SKILL.md
skills/aeo-optimize/: SKILL.md
skills/competitive-research/: SKILL.md
skills/create-visibility-report/: SKILL.md
skills/generate-faq/: SKILL.md
skills/generate-jsonld/: SKILL.md
tests/: test_marketing_tools.py  test_phase4_tools.py  test_prompt_angle_tools.py  test_setup_store_tools.py  test_sources_tools.py
