[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeko-mcp"
version = "0.2.0"
description = "AEKO MCP — AI Engine Optimization tools for Claude"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
pdf = ["PyPDF2>=3.0.0"]
docx = ["python-docx>=1.0.0"]
all = ["PyPDF2>=3.0.0", "python-docx>=1.0.0"]

[project.scripts]
aeko-mcp = "aeko_mcp.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["aeko_mcp"]
